--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,14 @@
 body{
   background-attachment: fixed;
   font-family: Helvetica, Arial;
-  cursor: url('../src/imgs/cursores/Pointer.png'), auto;
+  cursor: url('https://i.ibb.co/PFTJL9T/Pointer.png'), auto;
 }
 a{
-  cursor: url('../src/imgs/cursores/Cursor2.png'), auto;
+  cursor: url('https://i.ibb.co/9YbRYbp/Cursor2.png'), auto;
 }
 .global{
   border-radius: 20px;
-  width: 65%;
+  width: 70%;
   margin: 0px auto;
   margin-top: 30px;
   padding: 25px;
@@ -49,6 +49,7 @@ h2{
   text-align: justify;
 }
 .button-plus{
+  color: white;
   border-radius: 20px;
   margin-top: 15px;
   font-size: 15px;
@@ -109,7 +110,7 @@ form textarea{
 }
 
 #button-submit{
-  cursor: url('../src/imgs/cursores/Cursor2.png'), auto;
+  cursor: url('https://i.ibb.co/9YbRYbp/Cursor2.png'), auto;
   background-color: white;
   padding: 10px;
   border: 1px solid white;
