--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   margin: 0px;
   padding: 0px;
@@ -5,7 +6,7 @@
 }
 body{
   background-attachment: fixed;
-  font-family: Helvetica, Arial;
+  font-family: "Work Sans", serif;
   cursor: url('https://i.postimg.cc/Ss4ccLkQ/Pointer.png'), auto;
 }
 a{
