--- a/src/stylesheets/extras.css
+++ b/src/stylesheets/extras.css
@@ -1,5 +1,5 @@
 .linkextra{
-    cursor: url('../imgs/cursores/Cursor2.png'), auto;
+    cursor: url('https://i.postimg.cc/Ss4ccLkQ/Pointer.png'), auto;
     color: white;
     text-decoration: none;
 }
